# libgammatone

./: .gitignore  CMakeLists.txt  README.md  TODO.md  TODO.org
doc/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  gammatone.bib
doc/example/: CMakeLists.txt  minimal.cpp
doc/example/src/: channels.cpp
doc/exemple/: .gitignore  CMakeLists.txt  plot_attenuation.cpp  plot_bandwidth.cpp  plot_channel_spacing.cpp  plot_core.cpp  plot_gain.cpp  plot_ir_comparison.cpp  plot_ir_filterbank.cpp  plot_tf.cpp
doc/exemple/src/: minimal.cpp
doc/markdown/: INSTALL.md  TUTORIAL.md
example/: CMakeLists.txt
example/src/: cochleogram.cpp  minimal.cpp
exemple/: CMakeLists.txt
exemple/include/: chrono.hpp  wav.hpp
exemple/src/: cochleogram.cpp
include/gammatone/: factory.hpp  filter.hpp  filterbank.hpp  gammatone.hpp  impulse_response.hpp  interface.hpp  interface_filter.hpp  version.hpp.in
include/gammatone/core/: base.hpp  convolution.hpp  cooke1993.hpp  holdsworth.hpp  holdsworth_rir.hpp  slaney1993.hpp  slaney1993_iir.hpp
include/gammatone/detail/: decibel.hpp  factory.hpp  impulse_response.hpp  interface.hpp  singleton.hpp  utils.hpp  version.hpp
include/gammatone/filter/: concrete.hpp  factory.hpp  filter_key.hpp  holder.hpp  interface.hpp
include/gammatone/filterbank/: concrete.hpp  factory.hpp  holder.hpp  interface.hpp
include/gammatone/policy/: bandwidth.hpp  channels.hpp  clipping.hpp  gain.hpp  order.hpp  policy.hpp  postprocessing.hpp  spacing.hpp
include/gammatone/policy/bandwidth/: base.hpp  glasberg1990.hpp  greenwood1990.hpp  slaney1988.hpp
include/gammatone/policy/channels/: base.hpp  fixed_overlap.hpp  fixed_size.hpp
include/utils/: range.hpp  singleton.hpp  utils.hpp
python/: CMakeLists.txt  __init__.py  gammatone.cpp  gammatone_wrapper.cpp  setup.py  test_wrapper.py
python/gammatone/: CMakeLists.txt  __init__.py  gammatone.cpp
python/gammatone/filter/: CMakeLists.txt  __init__.py  _filter.cpp
python/gammatone/filterbank/: CMakeLists.txt  __init__.py  _filterbank.cpp
share/: CMakeLists.txt  cochleogram.gp  setup.gp  setup.gp.in
test/: CMakeLists.txt
test/data/: setup.gp
test/include/: filter_types.h  filter_types_all.h  filter_types_subset.h  filterbank_types.h  filterbank_types_all.h  filterbank_types_subset.h  test_setup.hpp  test_setup.hpp.in  test_utils.hpp
test/share/: setup.gp
test/src/: bandwidth_policy.cpp  channel_spacing.cpp  core_comparison.cpp  ir_comparison.cpp  plot_attenuation.cpp  plot_bandwidth.cpp  plot_channel_spacing.cpp  plot_core.cpp  plot_gain.cpp  plot_ir_comparison.cpp  plot_ir_filterbank.cpp  plot_tf.cpp  test_attenuation.cpp  test_core.cpp  test_factory.cpp  test_gain.cpp  test_holder.cpp  test_lifecycle.cpp  transfer_function.cpp
test/unit/: CMakeLists.txt  bandwidth.cpp  channels.cpp  clipping.cpp  core.cpp  decibel.cpp  filter.cpp  filterbank.cpp  impulse_response.cpp  interface.cpp  main.cpp  test_core_convolution.cpp  test_filter.cpp  test_filterbank.cpp  test_impulse_response.cpp  test_policies.cpp  test_policy_banswidth.cpp  test_policy_channels.cpp  test_policy_clipping.cpp  utils.cpp
test/unit/src/: core.cpp  main.cpp
test/unit/src/detail/: decibel.cpp  factory.cpp  impulse_response.cpp  interface.cpp  singleton.cpp
test/unit/src/filter/: concrete.cpp
test/unit/src/filterbank/: concrete.cpp
test/unit/src/policy/: channels.cpp  clipping.cpp
